# reviews

./: asset-manifest.json  index.html  package-lock.json  q
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  firebase.js  index.js  sampleClassData.js  sampleDiningData.js  sampleProfData.js
frontend/src/components/: AddReview.js  ApartmentFilter  ApartmentFilter.js  ApartmentReview.js  ApartmentReviewOverview.js  ClassProfessorFilter.js  ClassReview.js  ClassesReviewOverview.js  CommentComponent.js  CoolSearchbar.js  DiningFilter.js  DiningReview.js  DiningReviewOverview.js  DropdownComponent.css  DropdownComponent.js  FilterSlider.js  Header.js  PreviewCard.js  ProfessorsReviewOverview.js  ProffessorsReviewOverview.js  ReviewCard.js  ReviewEditor.js  ReviewOverview.js  TestComponent.js  Textbox.css  ViewDiningHallReviewInfo.js  ViewDormReviewInfo.js  ViewReviewInfo.js  helpers.js  navbar.js
frontend/src/routes/: App.js  CreateReview.js
frontend/src/style/: PreviewCard.css  ReviewOverview.css  addreview.css  filter.css  (+2 more)
server/: Cargo.toml  README.md
server/src/: main.rs
server/src/firebase/: mod.rs
server/src/routes/: mod.rs
server/src/scraper/: mod.rs
static/css/: main.866c938f.css  main.866c938f.css.map  main.8ce4e4d8.css  main.8ce4e4d8.css.map
static/js/: main.06d7b0e9.js  main.10bedff0.js  main.30ee9ee8.js  main.6f872f6e.js  main.6f872f6e.js.LICENSE.txt  main.8fbccb9a.js  main.aa6300e9.js  main.aac41eb7.js  main.aac41eb7.js.LICENSE.txt  main.eba6fa34.js  main.eba6fa34.js.LICENSE.txt
(+17 files in other folders)
