[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.32", features = ["full"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
thirtyfour = "0.31.0"
serde = "1.0.193"
dotenv = "0.15.0"
